fix spacing for logo and drop-down menu

--- a/fr/css/flexslider.css
+++ b/fr/css/flexslider.css
@@ -21,7 +21,7 @@
 
 /* FlexSlider Necessary Styles
 *********************************/ 
-.flexslider { margin-right: 15%; margin-left:15%; margin-top:10%; padding: 0; height:70%; width:70%; text-align:center;}
+.flexslider { margin-right: 15%; margin-left:15%; margin-top:-5%; padding: 0; height:70%; width:70%; text-align:center;}
 .flexslider-small { margin-right: 10%; margin-left:45%; padding: 0; height:70%; width:70%; text-align:center;}
 .flexslider .slides > li {display: none; -webkit-backface-visibility: hidden;} /* Hide the slides before the JS is loaded. Avoids image jumping */
 .flexslider .slides img { width: 100%!important; height:70%; width: 70%; text-align:center; display: block;}
